src/objects/zqu__ProductRatePlanCharge__c.object
<CustomObject>
    <fields>
        <fullName>zqu__Upto_How_Many_Periods__c</fullName>
        <description>Determines the period when discount charge model charge is added.</description>
        <label>Up To How Many Periods</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__UsageRecordRatingOption__c</fullName>
        <description>Determines how Zuora processes usage records for per-unit usage charges.</description>
        <label>Usage Record Rating Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>End Of Billing Period</fullName>
                </value>
                <value>
                    <fullName>On Demand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__UseDiscountSpecificAccountingCode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether to define a new accounting code for the new discount charge.</description>
        <label>Use Discount Specific Accounting Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__UseTenantDefaultForPriceChange__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Applies the tenant-level percentage uplift value for an automatic price change to a termed subscription&apos;s renewal.</description>
        <label>Use Tenant Default For Price Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__WeeklyBillCycleDay__c</fullName>
        <description>Specifies which day of the week as the bill cycle day (BCD) for the charge.</description>
        <label>Weekly Bill Cycle Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__ZUnitOfMeasure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UOM</label>
        <referenceTo>zqu__ZUnitOfMeasure__c</referenceTo>
        <relationshipLabel>Unit Of Measure</relationshipLabel>
        <relationshipName>ZUnit_Of_Measure</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__ZUom_Id__c</fullName>
        <description>Zuora UOM Id</description>
        <label>Uom Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The Zuora Id (external primary key) of this Rate Plan Charge.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Zuora Id (external primary key) of this Rate Plan Charge.</inlineHelpText>
        <label>Zuora Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product Rate Plan Charge</label>
    <nameField>
        <label>Rate Plan Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Rate Plan Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>